[project]
name = "unitycatalog-function"
version = "0.0.1"
description = "Official python library for unitycatalog functions support"
authors = [
    { name="Serena Ruan", email="serena.ruan@databricks.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "typing_extensions"
]

[project.license]
file = "LICENSE.txt"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project.optional-dependencies]
dev = [
  "pytest",
  "databricks-sdk",
  # Note: databricks-connect 15.1 is recommended for serverless, databricks-connect>=14.0.0 requires python>=3.10
  "databricks-connect==15.1.0",
  "pandas",
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[too.ruff.lint]
select = [
  # isort
  "I",
  # bugbear rules
  "B",
  # remove unused imports
  "F401",
  # bare except statements
  "E722",
  # print statements
  "T201",
  "T203",
  # misuse of typing.TYPE_CHECKING
  "TCH004",
  # import rules
  "TID251",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.ruff.lint.pydocstyle]
convention = "google"
